shopping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-shopping-cart-deploy
spec:
  selector:
    matchLabels:
      app: ms-shopping-cart
  template:
    metadata:
      labels:
        app: ms-shopping-cart
    spec:
      containers:
      - name: ms-shopping-cart
        image: andr35/devops-ninja:1.0-ms-shopping-cart
        ports:
        - containerPort: 3002

---
apiVersion: v1
kind: Service
metadata:
  name: shopping-cart
spec:
  selector:
    app: ms-shopping-cart
  ports:
  - port: 3002
    protocol: TCP
    targetPort: 3002
